--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,8 @@ ext {
     androidXAnnotations = '1.3.0'
     androidXLegacySupport = '1.0.0'
     appCompatVersion = '1.4.1'
-    archLifecycleVersion = '2.2.0'
+    archLifecycleVersion = '2.4.0'
+    extLifecycleVersion = '2.2.0'
     cardVersion = '1.0.0'
     materialVersion = '1.5.0'
     fragmentVersion = '1.5.0-alpha01'
